# Cadastro

./: LICENSE  README.md  models.py  pedido_list_all.html  pyproject.toml  urls.py  views.py
backend/: settings.py  urls.py
backend/base/: models.py  urls.py  views.py
backend/base/static/: style.css
backend/base/templates/: base.html  index.html  login.html
backend/base/templates/includes/: nav.html  pagination.html
backend/pedido/: admin.py  forms.py  managers.py  models.py  urls.py  views.py
backend/pedido/migrations/: 0001_initial.py  0002_pedido_pendente_alter_pedido_status.py  0003_remove_pedido_pendente_pedido_tipo.py
backend/pedido/templates/: pedido_add.html  pedido_list_all.html
backend/pedido/templates/abastecer/: pedido_abastecer_detail.html  pedido_abastecer_list.html
backend/pedido/templates/visitar/: pedido_visitar_detail.html  pedido_visitar_list.html
backend/usuarios/: admin.py  forms.py  models.py  urls.py  verificacao.py  views.py
backend/usuarios/migrations/: 0001_initial.py
backend/usuarios/templates/dependente/: dependente_list.html
backend/usuarios/templates/endereco/: endereco_titular.html
backend/usuarios/templates/titular/: titular_add.html  titular_detail.html  titular_edit.html  titular_list.html
